# plutus

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  strategy.yaml  tax_profile.example.yaml
.github/workflows/: ci.yml
config/: actual_accounts.example.yaml  simplefin_accounts.example.yaml
deploy/: README.md  plutus-daily.service  plutus-daily.timer
exporter/: Dockerfile  index.js  package.json
scripts/: plutus-run
src/plutus/: __init__.py  analysis.py  fetch_simplefin.py  model.py  report.py  run.py  storage.py  strategy.py  tax.py
src/plutus/providers/: __init__.py  accountmap.py  actual.py  base.py  fake.py  simplefin.py
tests/: test_accountmap.py  test_actual_provider.py  test_analysis_allocation.py  test_analysis_networth.py  test_fetch_simplefin.py  test_model.py  test_provider_base.py  test_report.py  test_run.py  test_simplefin_provider.py  test_simplefin_provider_edges.py  test_smoke.py  test_storage_accounts.py  test_storage_constraints.py  test_storage_history.py  test_storage_holdings.py  test_storage_snapshot_detail.py  test_storage_transactions.py  test_strategy.py  test_tax_estimate.py  test_tax_harvesting.py  test_tax_withholding.py
tests/fixtures/: actual_accounts.yaml  actual_export.json  simplefin_accounts.json  simplefin_accounts_map.yaml
